cargo-features = ["profile-rustflags", "codegen-backend"]

[profile.dev]
debug = "full"
strip = false
opt-level = 0
incremental = true
rustflags = ["-Z", "threads=8", "-C", "link-arg=-fuse-ld=lld"]

[profile.rust-analyzer]
inherits = "dev"
debug = false

[profile.release]
debug = "limited"
strip = true
opt-level = "z"
lto = true
codegen-units = 1
rustflags = ["-Z", "threads=8", "-C", "link-arg=-fuse-ld=lld"]

[workspace]
members = [
  "libs/core",
  "libs/positioning",
  "libs/slu-ipc",
  "libs/utils",
  "src",
  "src/hook_dll",
]
resolver = "3"
lints = {}

[workspace.dependencies]
tokio = "1.49.0"
thiserror = "2.0.18"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9.34"
log = "0.4"
arc-swap = "1.8.1"
backtrace = "0.3.76"
base64 = "0.22.1"
battery = "0.7.8"
clap = "4.5.58"
crossbeam-channel = "0.5.15"
discord-rich-presence = "0.2.5"
encoding_rs = "0.8.35"
evalexpr = "11.3.1"
fern = "0.7.1"
futures = "0.3.31"
image = "0.25.9"
interprocess = "2.3.1"
itertools = "0.14.0"
lazy_static = "1.5.0"
notify-debouncer-full = "0.3.2"
minisign = "0.8.0"
os_info = "3.14.0"
owo-colors = "4.2.3"
parking_lot = "0.12.5"
phf = "0.13.1"
quick-xml = "0.38.4"
rand = "0.9.2"
regex = "1.12.3"
reqwest = "0.12.28"
rust-i18n = "3.1.5"
sha2 = "0.10.9"
seelen-core = { path = "libs/core" }
slu-ipc = { path = "libs/slu-ipc" }
slu-utils = { path = "libs/utils" }
positioning = { path = "libs/positioning" }
sysinfo = "0.38.1"
tauri = "2.10.2"
tauri-build = "2.5.5"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-deep-link = "2.4.7"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-http = "2.5.7"
tauri-plugin-log = "2.8.0"
tauri-plugin-process = "2.3.1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-updater = "2.10.0"
translators = "0.1.5"
url = "2.5.8"
urlencoding = "2.1.3"
uuid = "1.20.0"
walkdir = "2.5.0"
widestring = "1.2.1"
win-hotkeys = { git = "https://github.com/Seelen-Inc/windows-keyboard-hook.git", features = ["serde"] }
win-screenshot = "4.0.14"
windows = "0.59.0"
wmi = "0.18.1"
windows-core = "0.59.0"
winreg = "0.55.0"
time = "0.3.47"
scc = "2.4.0"
