[profile.dev]
debug = "full"
strip = false
opt-level = 0
incremental = true

[profile.rust-analyzer]
inherits = "dev"
debug = false

[profile.release]
debug = "limited"
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[workspace]
members = [
  "libs/core",
  "libs/positioning",
  "libs/slu-ipc",
  "libs/slu-macros",
  "libs/utils",
  "src",
  "src/hook_dll",
]
resolver = "3"
lints = {}

[workspace.dependencies]
tokio = "1.49.0"
thiserror = "2.0.18"
serde = "1.0"
serde_json = "1.0"
serde_path_to_error = "0.1"
serde_yaml = "0.9.34"
log = "0.4"
arc-swap = "1.9.1"
backtrace = "0.3.76"
base64 = "0.22.1"
battery = "0.7.8"
clap = "4.6.1"
crossbeam-channel = "0.5.15"
discord-rich-presence = "1.1.0"
encoding_rs = "0.8.35"
fern = "0.7.1"
futures = "0.3.32"
image = "0.25.10"
webp = "0.3"
interprocess = "2.4.2"
itertools = "0.14.0"
notify-debouncer-full = "0.3.2"
minisign = "0.9.1"
os_info = "3.14.0"
owo-colors = "4.2.3"
parking_lot = "0.12.5"
phf = "0.11.3"
quick-xml = "0.38.4"
rand = "0.9.3"
rustfft = "6"
rayon = "1.10"
regex = "1.12.3"
reqwest = "0.13.1"
rust-i18n = "4.1.0"
salvo = { git = "https://github.com/eythaann/salvo.git" }
sha2 = "0.10.9"
seelen-core = { path = "libs/core" }
slu-ipc = { path = "libs/slu-ipc" }
slu-macros = { path = "libs/slu-macros" }
slu-utils = { path = "libs/utils" }
positioning = { path = "libs/positioning" }
sysinfo = "0.38.3"
tauri = "2.11.2"
tauri-build = "2.6.2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-updater = "2.10.1"
translators = "0.1.5"
url = "2.5.8"
urlencoding = "2.1.3"
uuid = "1.20.0"
walkdir = "2.5.0"
widestring = "1.2.1"
win-hotkeys = { git = "https://github.com/Seelen-Inc/windows-keyboard-hook.git", features = ["serde"] }
win-screenshot = "4.0.14"
windows = "0.62.2"
windows-future = "0.3.2"
wmi = "0.18.1"
windows-core = "0.62.2"
winreg = "0.55.0"
time = "0.3.47"
scc = "2.4.0"
