[package]
name = "slu-ipc"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
log = { workspace = true }
interprocess = { workspace = true, features = ["tokio"] }
