[package]
name = "komorebi-ui"
version = "1.0.0"
description = "Komorebi UI Background"
authors = ["eythaann"]
license = "MIT"
repository = "https://github.com/eythaann/komorebi-ui.git"
default-run = "komorebi-ui"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.1", features = [ "cli", "fs-all", "path-all", "window-close", "window-start-dragging", "window-show"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
