[package]
name = "positioning"
edition = "2024"

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
log = { workspace = true }
keyframe = "1.1.1"
scc = { workspace = true }
windows = { workspace = true, features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging"] }
